# centralized-desktop-configuration

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: keyboard.toml
examples/: daylight.toml  keyboard.toml  neovim-daylight.md  pointer.toml
src/desktopctl/: cli.py  daylight.py  keyboard.py  pointer.py  xinput.py
