[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktopctl"
version = "0.1.0"
description = "Centralized desktop configuration tool"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.scripts]
desktopctl = "desktopctl.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/desktopctl"]
